# qtestsign

./: .gitignore  README.md  cert.py  hashseg.py  merge.py  patchxbl.py  pyproject.toml  qtestsign.py  region.py  requirements.txt  sign.py  strip.py
fw/: elf.py  hashseg.py
mbn/: elf.py  hashseg.py
